# 09-voiceagent

./: main.py  pyproject.toml  requirements.txt  test_api.py
core/: config.py  elevenlabs_service.py  gemini_service.py
models/: schemas.py
routes/: chat.py  stt.py  tts.py  voice.py  websocket_voice.py
